minor bugs fixed

--- a/train.ipynb
+++ b/train.ipynb
@@ -12,7 +12,7 @@
     "import torchvision.transforms as T\n",
     "from torch.utils.data import DataLoader\n",
     "from unet import UNET\n",
-    "import torchvision.transforms as F\n",
+    "import torch.nn.functional as F\n",
     "import torch.cuda.amp as amp\n",
     "#from tensorboardX import SummaryWriter\n",
     "from tqdm import tqdm\n",
@@ -57,8 +57,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 64\n",
-    "train_loader = DataLoader(train_data, batch_size=16, shuffle=True, num_workers=4, pin_memory=True)\n",
+    "batch_size = 4\n",
+    "train_loader = DataLoader(train_data, batch_size=batch_size, shuffle=True, num_workers=4, pin_memory=True)\n",
     "val_loader = DataLoader(val_data, batch_size=1, shuffle=True, num_workers=4, pin_memory=True)"
    ]
   },
