--- a/train.ipynb
+++ b/train.ipynb
@@ -42,8 +42,8 @@
     }
    ],
    "source": [
-    "crop_width = 1024\n",
-    "crop_height = 512\n",
+    "crop_width = 512\n",
+    "crop_height = 256\n",
     "composed = T.Compose([T.ToTensor(), T.RandomHorizontalFlip(p=0.5), T.RandomAffine(0, scale=[0.75, 2.0]), T.RandomCrop((crop_height, crop_width), pad_if_needed=True)])\n",
     "train_data = Cityscapes(\"./data/Cityscapes\", \"images/\", \"labels/\", train=True, info_file=\"info.json\", transforms=composed)\n",
     "val_data = Cityscapes(\"./data/Cityscapes\", \"images/\", \"labels/\", train=False, info_file=\"info.json\", transforms=composed)\n",
@@ -57,9 +57,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 1\n",
-    "train_loader = DataLoader(train_data, batch_size=batch_size, shuffle=True, num_workers=4, pin_memory=True)\n",
-    "val_loader = DataLoader(val_data, batch_size=1, shuffle=True, num_workers=4, pin_memory=True)"
+    "batch_size = 4\n",
+    "\n",
+    "print(len(train_data)) # 500\n",
+    "print(len(val_data)) # 250\n",
+    "\n",
+    "train_loader = DataLoader(train_data, batch_size=batch_size, shuffle=True)\n",
+    "val_loader = DataLoader(val_data, batch_size=1, shuffle=True)"
    ]
   },
   {
@@ -133,11 +137,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(model, optimizer, trainloader, valloader, epoch_start_i=0, num_epochs=50, batch_size=64, validation_step=1, save_model_path=\".\"):             \n",
+    "def train(model, optimizer, trainloader, valloader, epoch_start_i=0, num_epochs=50, batch_size=4, validation_step=1, save_model_path=\".\"):             \n",
     "\n",
     "    \n",
     "    #Create the scaler\n",
-    "    scaler = amp.GradScaler() \n",
+    "    # scaler = amp.GradScaler() \n",
     "    \n",
     "    #Writer\n",
     "    #writer = SummaryWriter(f\"{args.tensorboard_logdir}{suffix}\")\n",
@@ -147,6 +151,7 @@
     "    \n",
     "    max_miou = 0\n",
     "    step = 0\n",
+    "    total = 0\n",
     "\n",
     "    for epoch in range(epoch_start_i, num_epochs):\n",
     "\n",
@@ -154,7 +159,8 @@
     "        model.train()\n",
     "\n",
     "        #TQDM Setting\n",
-    "        tq = tqdm(total = len(trainloader)*batch_size) \n",
+    "        total = total + batch_size\n",
+    "        tq = tqdm(total) \n",
     "        tq.set_description('epoch %d, lr %f' % (epoch, lr))\n",
     "        \n",
     "        #Loss array\n",
@@ -164,23 +170,20 @@
     "            #Train with source\n",
     "            labels = labels.long()\n",
     "            images = images.to(device)\n",
+    "            print(f\"images.shape: {images.shape}\")\n",
     "            labels = labels.to(device)\n",
-    "            \n",
+    "            # print(f\"lables: {images}\")\n",
     "            optimizer.zero_grad()\n",
     "\n",
-    "            with amp.autocast():\n",
-    "                output = model(images) \n",
+    "            output = model(images)\n",
+    "                \n",
+    "            # print(f\"logits: {output}\")\n",
+    "            loss_seg = loss_func(output, labels)                                                             \n",
     "\n",
-    "            loss_seg = loss_func(F.softmax(output, dim=1), labels)\n",
-    "            print(loss_seg.item())                                                                 \n",
+    "            loss_seg.backward() \n",
     "\n",
-    "            scaler.scale(loss_seg).backward() \n",
-    "\n",
-    "            scaler.step(optimizer)\n",
-    "\n",
-    "            scaler.update()\n",
-    "            \n",
-    "\n",
+    "            optimizer.step()\n",
+    "          \n",
     "            #Print statistics\n",
     "            tq.update(batch_size)\n",
     "            tq.set_postfix({\"loss_seg\" : f'{loss_seg:.6f}'})\n",
@@ -204,14 +207,14 @@
     "        #    torch.save(discriminator.module.state_dict(), os.path.join(args.save_model_path, 'latest_discriminator.pth'))\n",
     "        \n",
     "        #Validation step\n",
-    "        if epoch % validation_step == 0 and epoch != 0:\n",
-    "                precision, miou = val(model, valloader, epoch)\n",
+    "        # if epoch % validation_step == 0 and epoch != 0:\n",
+    "        #         precision, miou = val(model, valloader, epoch)\n",
     "                #Check if the current model is the best one\n",
-    "                if miou > max_miou:\n",
-    "                    max_miou = miou\n",
-    "                    os.makedirs(save_model_path, exist_ok=True)\n",
-    "                    torch.save(model.module.state_dict(),\n",
-    "                            os.path.join(save_model_path, 'best_model.pth'))\n",
+    "        #        if miou > max_miou:\n",
+    "        #            max_miou = miou\n",
+    "        #            os.makedirs(save_model_path, exist_ok=True)\n",
+    "        #            torch.save(model.module.state_dict(),\n",
+    "        #                    os.path.join(save_model_path, 'best_model.pth'))\n",
     "\n",
     "                #writer.add_scalar('epoch/precision_val', precision, epoch)\n",
     "                #writer.add_scalar('epoch/overall miou val', miou, epoch)\n"
@@ -224,21 +227,18 @@
    "outputs": [],
    "source": [
     "lr = 1e-3\n",
-    "momentum = 0.9\n",
     "weight_decay = 0.0005\n",
     "\n",
     "model = UNET(3, 19).to(device)\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=lr, weight_decay=weight_decay)\n",
     "\n",
-    "train(model, optimizer, train_loader, val_loader)\n",
-    "\n",
-    "val(model, val_loader, validation_run='final')"
+    "train(model, optimizer, train_loader, val_loader)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('base')",
+   "display_name": "Python 3.10.8 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -252,12 +252,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "6ebd908b7e74dac9a348e9d3abf074a61c1e7e8efc0ae4932d05c55de7bf9a20"
+    "hash": "767d51c1340bd893661ea55ea3124f6de3c7a262a8b4abca0554b478b1e2ff90"
    }
   }
  },
