--- a/train.ipynb
+++ b/train.ipynb
@@ -238,7 +238,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 64-bit",
+   "display_name": "Python 3.9.15 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -252,12 +252,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "767d51c1340bd893661ea55ea3124f6de3c7a262a8b4abca0554b478b1e2ff90"
+    "hash": "d806552c73594e19b5256aa25c99f7b7bb58fce6ee1bb443239333d0be767377"
    }
   }
  },
