--- a/clustering.ipynb
+++ b/clustering.ipynb
@@ -36,6 +36,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[0 0 1 ... 0 0 0]\n",
       "Number of segments:  19\n"
      ]
     },
@@ -52,26 +53,23 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import cv2 as cv\n",
-    "from sklearn.cluster import MeanShift, estimate_bandwidth\n",
-    "\n",
-    "img = cv.imread(\"aachen_000001_000019_leftImg8bit.png\")\n",
+    "img = cv.imread(\"./data/Cityscapes/images/aachen_000001_000019_leftImg8bit.png\")\n",
     "\n",
     "# filter to reduce noise\n",
     "img = cv.medianBlur(img, 3)\n",
     "\n",
     "# flatten the image\n",
-    "flat_image = img.reshape((-1,3))\n",
-    "flat_image = np.float32(flat_image)\n",
+    "flat_image = np.float32(img.reshape((-1,3)))\n",
     "\n",
-    "# meanshift\n",
-    "bandwidth = estimate_bandwidth(flat_image, quantile=.06, n_samples=3000)\n",
-    "ms = MeanShift(bandwidth=bandwidth, max_iter=800, bin_seeding=True)\n",
+    "# estimate kernel bandwidth for min_shift\n",
+    "kernel_bandwidth = estimate_bandwidth(flat_image, quantile=.06, n_samples=3000)\n",
+    "ms = MeanShift(bandwidth=kernel_bandwidth, max_iter=800, bin_seeding=True)\n",
     "ms.fit(flat_image)\n",
     "labeled=ms.labels_\n",
     "\n",
-    "# get number of segments\n",
+    "print(labeled)\n",
+    "\n",
+    "# get number of different segments\n",
     "segments = np.unique(labeled)\n",
     "print('Number of segments: ', segments.shape[0])\n",
     "\n",
@@ -81,14 +79,15 @@
     "for i, label in enumerate(labeled):\n",
     "    total[label] = total[label] + flat_image[i]\n",
     "    count[label] += 1\n",
-    "avg = total/count\n",
-    "avg = np.uint8(avg)\n",
+    "\n",
+    "avg_color = total/count\n",
+    "avg_color = np.uint8(avg_color)\n",
     "\n",
     "# cast the labeled image into the corresponding average color\n",
-    "res = avg[labeled]\n",
-    "result = res.reshape((img.shape))\n",
+    "result = avg_color[labeled]\n",
+    "result = result.reshape((img.shape))\n",
     "\n",
-    "# show the result\n",
+    "# show and save the result\n",
     "cv.imwrite('./output/result_ms_1.png', result)\n",
     "Image.fromarray(result)"
    ]
@@ -106,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = cv.imread(\"aachen_000001_000019_leftImg8bit.png\")\n",
+    "image = cv.imread(\"./data/Cityscapes/images/aachen_000001_000019_leftImg8bit.png\")\n",
     "# convert to RGB\n",
     "image = cv.cvtColor(image, cv.COLOR_BGR2RGB)\n",
     "# reshape the image to a 2D array of pixels and 3 color values (RGB)\n",
@@ -151,14 +150,14 @@
     }
    ],
    "source": [
-    "img = cv.imread(\"aachen_000001_000019_gtFine_labelIds.png\")\n",
+    "img = cv.imread(\".data/Cityscapes/labels/aachen_000001_000019_gtFine_labelIds.png\")\n",
     "print(np.unique(img))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 2.7.16 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -172,12 +171,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d806552c73594e19b5256aa25c99f7b7bb58fce6ee1bb443239333d0be767377"
+    "hash": "767d51c1340bd893661ea55ea3124f6de3c7a262a8b4abca0554b478b1e2ff90"
    }
   }
  },
